--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>App name</title>
+		<title>Unnamed Game</title>
 	</head>
 	<body>
 		<div id="root"></div>
